--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dacman46_left
+    shield: cornec_left
   - board: nice_nano_v2
-    shield: dacman46_right
+    shield: cornec_right
